<resources>
    <string name="app_name">Dialog Fragment Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="show_dialog_fragment">Show dialog fragment</string>
    <string name="this_is_dialog_fragment">This is Dialog Fragment</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_age">Enter Your Age</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
</resources>